Try to get healthcheck working